--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        app:cardCornerRadius="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,40 +22,85 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:padding="24dp"
+            android:background="@color/background_component">
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/login_email"
-                android:layout_marginTop="40dp"
-                android:padding="8dp"
-                android:hint="Email"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:id="@+id/loginText"
+                android:textSize="36sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Name"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:drawablePadding="8dp"/>
+
+                />
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/login_password"
-                android:layout_marginTop="20dp"
+                android:layout_height="40dp"
+                android:id="@+id/username"
+                android:background="@color/white"
+                android:layout_marginTop="10dp"
+                android:padding="8dp"
+                android:hint="Enter username.."
+                android:textColor="@color/black"
+              />
+
+            <TextView
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Password"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/password"
+                android:background="@color/white"
+                android:layout_marginTop="10dp"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:hint="Password"
-                android:textColor="@color/white"
-                android:drawablePadding="8dp"/>
+                android:hint="Enter password..."
+                android:textColor="@color/black"
+                />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="Login"
-                android:id="@+id/login_button"
+                android:id="@+id/loginButton"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple_200"
+                android:backgroundTint="@color/background_button"
                 app:cornerRadius = "20dp"/>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Create new account"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:textAlignment="center"
+                android:id="@+id/createUser"
+                />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
