--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,13 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/baseline_menu_24"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:ignore="MissingConstraints"
-        android:background=""
-        app:tint="@color/white"/>
 
-    <ImageButton
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_add_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="368dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:background=""
-        app:tint="@color/white"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
-    <ImageButton
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_person_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="332dp"
-        tools:layout_editor_absoluteY="16dp"
+        tools:layout_marginTop="16dp"
+        tools:layout_marginLeft="16dp"
+
         android:background=""
         app:tint="@color/white"
         />
@@ -42,19 +26,203 @@
     <ImageButton
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/baseline_delete_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="368dp"
-        tools:layout_editor_absoluteY="696dp"
+
+        android:src="@drawable/baseline_add_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginRight="16dp"
+        tools:layout_marginTop="16dp"
+
         android:background=""
-        app:tint="@color/white"/>
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/baseline_person_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginRight="48dp"
+        tools:layout_marginTop="16dp"
+
+        android:background=""
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_delete_24"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+
+        android:background=""
+
+        app:tint="@color/white"
+        />
 
     <EditText
+        android:id="@+id/search"
+
         android:layout_width="300dp"
         android:layout_height="40dp"
+
         android:background="@color/white"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="80dp" />
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:hint="   Busca..."
+
+        tools:layout_marginTop="80dp"
+        />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/baseline_search_24"
+
+        app:layout_constraintRight_toRightOf="@id/search"
+        app:layout_constraintTop_toTopOf="@id/search"
+
+        tools:layout_marginRight="4dp"
+        tools:layout_marginTop="4dp"
+
+        android:background=""
+        app:tint="@color/black"
+        />
+
+    <ScrollView
+        android:layout_height="500dp"
+        android:layout_width="300dp"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/search">
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+
+            android:orientation="vertical"
+
+            android:layout_marginTop="10dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="20dp"
+                    android:textSize="16dp"
+                    android:text="Nom de la nota (PLACEHOLDER)"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="20dp"
+                    android:textSize="13dp"
+                    android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                    />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.cardview.widget.CardView
+        android:visibility="gone"
+
+        android:id="@+id/menu"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+
+        app:layout_constraintLeft_toLeftOf="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="match_parent"
+
+                android:textAlignment="textStart"
+
+                android:layout_height="45dp"
+
+                android:text="Recordatori"
+                android:textSize="18dp"
+
+                android:textColor="@color/black"
+
+                android:background=""
+                />
+
+            <Button
+                android:layout_width="match_parent"
+
+                android:textAlignment="textStart"
+
+                android:layout_height="45dp"
+
+                android:text="Agenda"
+                android:textSize="18dp"
+
+                android:textColor="@color/black"
+
+                android:background=""
+                />
+
+            <Button
+                android:layout_width="match_parent"
+
+                android:textAlignment="textStart"
+
+                android:layout_height="45dp"
+
+                android:text="Notes Compartides"
+                android:textSize="18dp"
+
+                android:textColor="@color/black"
+
+                android:background=""
+                />
+
+            <Button
+                android:layout_width="match_parent"
+
+                android:textAlignment="textStart"
+
+                android:layout_height="45dp"
+
+                android:text="Configuració"
+                android:textSize="18dp"
+
+                android:textColor="@color/black"
+
+                android:background=""
+                />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
