--- a/app/src/main/res/layout/note_creator.xml
+++ b/app/src/main/res/layout/note_creator.xml
@@ -12,9 +12,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <TextView
-        android:id="@+id/title"
         android:layout_width="250dp"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
 
         android:gravity="center"
 
@@ -28,9 +27,73 @@
 
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         />
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+
+            android:gravity="center"
+
+            android:text="Tipus de Nota"
+            android:textColor="@color/white"
+            android:textAlignment="gravity"
+            android:textSize="20dp"
+            android:textStyle="bold"
+
+            android:layout_marginTop="10dp"
+
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp">
+            <RadioButton
+                android:id="@+id/radio_nota"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:buttonTint="@color/white"
+
+                android:checked="true"
+
+                android:text="Nota"
+                android:textColor="@color/white"
+                android:textAlignment="gravity"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                />
+
+            <RadioButton
+                android:id="@+id/radio_recordatori"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:buttonTint="@color/white"
+
+                android:text="Recordatori"
+                android:textColor="@color/white"
+                android:textAlignment="gravity"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                />
+
+        </RadioGroup>
     </LinearLayout>
 
+    <Button
+        android:text="Crear Nota"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
