--- a/app/src/main/res/layout/note_creator.xml
+++ b/app/src/main/res/layout/note_creator.xml
@@ -94,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="@color/background_button"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
