--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="background_app">#0E0B20</color>
+    <color name="background_button">#EB1555</color>
 </resources>
