En process Calendari

--- a/app/src/main/res/layout/activity_recordatori.xml
+++ b/app/src/main/res/layout/activity_recordatori.xml
@@ -5,6 +5,84 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_app"
+    android:orientation="vertical"
     tools:context=".recordatori">
+
+
+    <ImageButton
+        android:id="@+id/menu_button"
+
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/baseline_menu_24"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginTop="16dp"
+        tools:layout_marginLeft="16dp"
+
+        android:background="@color/background_app"
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_add_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginRight="16dp"
+        tools:layout_marginTop="16dp"
+
+        android:background="@color/background_app"
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+
+        android:id="@+id/papelera"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_delete_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+
+        android:background="@color/background_app"
+
+        app:tint="@color/white"
+        />
+
+    <TextView
+        android:id="@+id/textRecordatorio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recordatorio"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@+id/menu_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/textRecordatorio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
