--- a/app/src/main/res/layout/activity_iniciar_sessio.xml
+++ b/app/src/main/res/layout/activity_iniciar_sessio.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/background_app"
-    tools:context=".iniciarSesion">
+    tools:context=".iniciarSessio">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -77,7 +75,7 @@
                 android:padding="8dp"
                 android:hint="Enter password..."
                 android:textColor="@color/black"
-              />
+                />
 
             <TextView
                 android:layout_marginTop="30dp"
@@ -116,6 +114,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
