--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        tools:layout_marginTop="16dp"
-        tools:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
 
         android:background="@color/transparent"
         app:tint="@color/white"
         />
 
     <ImageButton
+        android:id="@+id/create_note"
         android:layout_width="32dp"
         android:layout_height="32dp"
 
@@ -34,8 +35,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        tools:layout_marginRight="16dp"
-        tools:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
 
         android:background="@color/transparent"
         app:tint="@color/white"
@@ -49,8 +50,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        tools:layout_marginRight="48dp"
-        tools:layout_marginTop="16dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginTop="16dp"
 
         android:background="@color/transparent"
         app:tint="@color/white"
@@ -87,7 +88,7 @@
 
         android:hint="   Busca..."
 
-        tools:layout_marginTop="80dp"
+        android:layout_marginTop="80dp"
         />
 
     <ImageButton
@@ -98,8 +99,8 @@
         app:layout_constraintRight_toRightOf="@id/search"
         app:layout_constraintTop_toTopOf="@id/search"
 
-        tools:layout_marginRight="4dp"
-        tools:layout_marginTop="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
 
         android:background="@color/transparent"
         app:tint="@color/black"
@@ -215,6 +216,23 @@
                 android:layout_height="45dp"
 
                 android:text="Configuració"
+                android:textSize="18dp"
+
+                android:textColor="@color/black"
+
+                android:background="@color/transparent"
+                />
+
+            <Button
+                android:id="@+id/close_menu"
+
+                android:layout_width="match_parent"
+
+                android:textAlignment="textStart"
+
+                android:layout_height="45dp"
+
+                android:text="Tancar"
                 android:textSize="18dp"
 
                 android:textColor="@color/black"
