--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -63,13 +63,15 @@
         android:id="@+id/textAgenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Agenda"
+        android:text="AGENDA"
         android:textColor="@color/white"
+
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@+id/menu_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp"
         />
 
     <CalendarView
