--- a/app/src/main/res/layout/activity_papelera.xml
+++ b/app/src/main/res/layout/activity_papelera.xml
@@ -5,6 +5,59 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_app"
     tools:context=".papelera">
+
+    <ImageButton
+        android:id="@+id/menu_button"
+
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/baseline_menu_24"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginTop="16dp"
+        tools:layout_marginLeft="16dp"
+
+        android:background="@color/background_app"
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_add_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:layout_marginRight="16dp"
+        tools:layout_marginTop="16dp"
+
+        android:background="@color/background_app"
+        app:tint="@color/white"
+        />
+
+    <ImageButton
+
+        android:id="@+id/papelera"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_delete_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+
+        android:background="@color/background_app"
+
+        app:tint="@color/white"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
