Fet tot el demanat, fem revisió per el matí/tarda, fem els ultims canvis i fem merge.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,21 +45,6 @@
     <ImageButton
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/baseline_person_24"
-
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_marginRight="48dp"
-        android:layout_marginTop="16dp"
-
-        android:background="@color/transparent"
-        app:tint="@color/white"
-        />
-
-    <ImageButton
-        android:layout_width="32dp"
-        android:layout_height="32dp"
 
         android:src="@drawable/baseline_delete_24"
 
@@ -74,13 +59,32 @@
         app:tint="@color/white"
         />
 
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="75dp"
+
+        android:gravity="center"
+
+        android:text="NOTEKEEPER"
+        android:textColor="@color/white"
+        android:textAlignment="gravity"
+        android:textSize="20dp"
+        android:textStyle="bold"
+
+        android:layout_marginTop="15dp"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <EditText
         android:id="@+id/search"
 
         android:layout_width="300dp"
         android:layout_height="40dp"
 
-        android:background="@color/white"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
 
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -89,6 +93,7 @@
         android:hint="   Busca..."
 
         android:layout_marginTop="80dp"
+
         />
 
     <ImageButton
@@ -106,6 +111,26 @@
         app:tint="@color/black"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+
+        android:layout_height="500dp"
+        android:layout_width="300dp"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/search"
+
+        android:layout_marginTop="30dp">
+
+    <!--
+        El ScrollView i LinearLayout d'abaix són placeholders ja que a RecyclerView
+        s'afegeixen els elements de forma programatica.
+    -->
+
+
+    </androidx.recyclerview.widget.RecyclerView>
     <ScrollView
         android:layout_height="500dp"
         android:layout_width="300dp"
@@ -113,7 +138,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/search">
+        app:layout_constraintTop_toBottomOf="@+id/search"
+
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_height="wrap_content"
@@ -156,6 +183,8 @@
         android:layout_width="-300dp"
         android:layout_height="match_parent"
 
+        android:backgroundTint="@color/background_component"
+
         app:layout_constraintLeft_toLeftOf="parent">
 
         <LinearLayout
@@ -163,6 +192,39 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageButton
+                android:id="@+id/menu_close_button"
+
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/baseline_menu_24"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+
+                android:background="@color/transparent"
+                app:tint="@color/white"
+                />
+
+            <ImageView
+                android:id="@+id/menu_button"
+
+                android:layout_width="240dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="20dp"
+
+                android:layout_marginTop="16dp"
+                android:background="@color/transparent"
+
+                android:src="@drawable/notekeeper"
+                app:layout_constraintLeft_toLeftOf="parent"
+
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
             <Button
                 android:layout_width="match_parent"
 
@@ -170,10 +232,10 @@
 
                 android:layout_height="45dp"
 
-                android:text="Recordatori"
+                android:text="· Agenda"
                 android:textSize="18dp"
 
-                android:textColor="@color/black"
+                android:textColor="@color/white"
 
                 android:background="@color/transparent"
                 />
@@ -185,10 +247,10 @@
 
                 android:layout_height="45dp"
 
-                android:text="Agenda"
+                android:text="· Compartir"
                 android:textSize="18dp"
 
-                android:textColor="@color/black"
+                android:textColor="@color/white"
 
                 android:background="@color/transparent"
                 />
@@ -200,31 +262,16 @@
 
                 android:layout_height="45dp"
 
-                android:text="Notes Compartides"
+                android:text="· Perfil"
                 android:textSize="18dp"
 
-                android:textColor="@color/black"
+                android:textColor="@color/white"
 
                 android:background="@color/transparent"
                 />
 
             <Button
-                android:layout_width="match_parent"
-
-                android:textAlignment="textStart"
-
-                android:layout_height="45dp"
-
-                android:text="Configuració"
-                android:textSize="18dp"
-
-                android:textColor="@color/black"
-
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/close_menu"
+                android:id="@+id/configuration"
 
                 android:layout_width="match_parent"
 
@@ -232,10 +279,10 @@
 
                 android:layout_height="45dp"
 
-                android:text="Tancar"
+                android:text="· Configuració"
                 android:textSize="18dp"
 
-                android:textColor="@color/black"
+                android:textColor="@color/white"
 
                 android:background="@color/transparent"
                 />
