--- a/app/src/main/res/layout/note_editor.xml
+++ b/app/src/main/res/layout/note_editor.xml
@@ -4,42 +4,149 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/background_app">
+    android:background="@color/white">
+
+    <ImageButton
+        android:id="@+id/create_note"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_add_24"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+
+        android:background="@color/transparent"
+        app:tint="@color/black"
+        />
+
+    <ImageButton
+        android:id="@+id/go_back"
+
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="16dp"
+
+        android:layout_marginRight="16dp"
+        android:background="@color/transparent"
+
+        android:src="@drawable/baseline_close_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
+
+    <ImageButton
+        android:id="@+id/configuration"
+
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="16dp"
+
+        android:layout_marginRight="48dp"
+        android:background="@color/transparent"
+
+        android:src="@drawable/baseline_more_horiz_24"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/title"
+        android:id="@+id/configurationCardView"
+
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="-100dp"
+
         app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/background_button">
+
+        android:layout_marginTop="50dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/yellow"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/green"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/pink"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/purple"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/blue_light"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/grey_light"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/dark_grey"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
+        </LinearLayout>
 
         <ImageButton
-            android:id="@+id/go_back"
+            android:id="@+id/delete_note"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
 
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/baseline_arrow_back_24"
+            android:src="@drawable/outline_delete_48"
 
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="50dp"
 
             android:background="@color/transparent"
-            app:tint="@color/white"
+            app:tint="@color/red"
             />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="20dp"
-            android:textSize="20dp"
-            android:textAlignment="gravity"
+            android:layout_height="50dp"
+
             android:gravity="center"
-            android:textColor="@color/white"
-            android:text="Nom de la nota (PLACEHOLDER)"
+
+            android:text="Suprimir Nota"
+            android:textColor="@color/red"
+            android:textAlignment="gravity"
+            android:textSize="20dp"
+            android:textStyle="bold"
+
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
     </androidx.cardview.widget.CardView>
@@ -48,7 +155,92 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
+
+        android:hint="Escriu aqui..."
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+
         android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="50dp"
+
+        android:textAlignment="gravity"
+        android:gravity="top"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/configuration"
+
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+
+            android:background="@color/transparent"
+
+            android:src="@drawable/bold"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/configuration"
+
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+
+            android:background="@color/transparent"
+
+            android:src="@drawable/italic"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/configuration"
+
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+
+            android:background="@color/transparent"
+
+            android:src="@drawable/underlined"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/configuration"
+
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+
+            android:background="@color/transparent"
+
+            android:src="@drawable/strikethrough"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/configuration"
+
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+
+            android:background="@color/transparent"
+
+            android:src="@drawable/toc"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/black" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
