--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -92,6 +92,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="30dp"
+        android:id="@+id/text_sign_in"
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
