--- a/app/src/main/res/layout/activity_nota_compartir.xml
+++ b/app/src/main/res/layout/activity_nota_compartir.xml
@@ -9,7 +9,7 @@
     tools:context=".nota_compartir">
 
     <ImageButton
-        android:id="@+id/menu_button"
+        android:id="@+id/btn_save"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/save_exit"
@@ -22,7 +22,7 @@
 
 
     <ImageButton
-        android:id="@+id/close_button"
+        android:id="@+id/btn_close"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/canceler"
@@ -38,14 +38,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="72dp"
         android:layout_marginBottom="24dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_button">
+        app:layout_constraintTop_toBottomOf="@id/btn_save">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -57,9 +56,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <TextView
-                    android:id="@+id/notes_label"
+                    android:id="@+id/txt_notes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notes:"
@@ -67,19 +65,16 @@
                     android:textColor="@color/black"
                     android:layout_marginBottom="8dp" />
 
-
                 <EditText
                     android:id="@+id/notes_edittext"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="100dp"
                     android:padding="12dp"
-                    android:hint="Escribe tu nota aquí..."
+                    android:hint="Escriu la teva nota aquí..."
                     android:textSize="14sp"
                     android:textColor="@color/black"
                     android:gravity="top"
-
                     android:layout_marginBottom="24dp" />
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -110,53 +105,40 @@
                         android:paddingEnd="12dp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/asunto_label"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:orientation="vertical">
+                    android:text="Asunto:"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:layout_marginBottom="8dp" />
 
-                    <TextView
-                        android:id="@+id/time_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:text="Time:"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
-
-                    <TimePicker
-                        android:id="@+id/time_picker"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:headerBackground="@color/white"
-                        android:numbersSelectorColor="@color/background_button"
-                        android:numbersTextColor="@color/black"
-                        android:timePickerMode="spinner" />
-
-                    <TextView
-                        android:id="@+id/selected_time_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="12dp"
-                        android:text="Seleccionado: 9:41 AM"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
-                </LinearLayout>
+                <EditText
+                    android:id="@+id/asunto_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:padding="12dp"
+                    android:hint="Escriu l'asunto aquí..."
+                    android:textSize="14sp"
+                    android:textColor="@color/black"
+                    android:gravity="top"
+                    android:maxLines="4"
+                    android:scrollbars="vertical"
+                    android:layout_marginBottom="24dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="24dp">
 
                     <TextView
-                        android:id="@+id/alarm_label"
+                        android:id="@+id/destinatari_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Alarm:"
+                        android:text="Destinatari:"
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
@@ -165,19 +147,18 @@
                         android:layout_height="0dp"
                         android:layout_weight="1" />
 
-                    <Button
-                        android:id="@+id/alarm_button"
+                    <EditText
+                        android:id="@+id/destinatari_edittext"
                         android:layout_width="180dp"
                         android:layout_height="35dp"
-                        android:text="9:41 AM"
+                        android:padding="8dp"
+                        android:hint="XXXXXXXXX"
                         android:textSize="14sp"
-                        android:backgroundTint="@color/white"
                         android:textColor="@color/black"
-                        android:drawableEnd="@drawable/ic_alarm"
-                        android:drawablePadding="8dp"
-                        android:gravity="start|center_vertical"
-                        android:paddingStart="12dp"
-                        android:paddingEnd="12dp" />
+                        android:background="@color/white"
+                        android:inputType="number"
+                        android:maxLength="9"
+                        android:gravity="center_vertical" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -185,13 +166,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="24dp">
 
                     <TextView
-                        android:id="@+id/urgency_label"
+                        android:id="@+id/data_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Urgency:"
+                        android:text="Data:"
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
@@ -200,28 +181,28 @@
                         android:layout_height="0dp"
                         android:layout_weight="1" />
 
-                    <!-- Spinner para Urgency -->
-                    <Spinner
-                        android:id="@+id/urgency_spinner"
+                    <TextView
+                        android:id="@+id/selected_data_text"
                         android:layout_width="180dp"
                         android:layout_height="35dp"
-                        android:paddingStart="12dp"
-                        android:paddingEnd="12dp" />
+                        android:padding="8dp"
+                        android:hint="DD/MM/AAAA"
+                        android:textSize="14sp"
+                        android:gravity="center_vertical" />
                 </LinearLayout>
 
-                <!-- Fila para Recurrence -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="32dp">
+                    android:layout_marginBottom="10dp">
 
                     <TextView
                         android:id="@+id/recurrence_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Recurrence:"
+                        android:text="Recurrència:"
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
